--- a/force-app/main/default/classes/Controller_Projectapplication.cls
+++ b/force-app/main/default/classes/Controller_Projectapplication.cls
@@ -25,7 +25,7 @@ public with sharing class Controller_Projectapplication {
 
         Opportunity opp = [SELECT   Id,
                                     Name,//商机名称
-                                    Salesdepartment__c,//所属大区/二级公司
+                                    toLabel(ProjectArea__c),//所属大区/二级公司
                                     toLabel(MarketBidDept__c),//客户分部
                                     Customer_Secondary_Company__r.Name,//客户二级公司
                                     Province__c,//省份
@@ -44,7 +44,7 @@ public with sharing class Controller_Projectapplication {
 
         OpportunityVo oppVo = new OpportunityVo();
         oppVo.name = opp.Name;
-        oppVo.salesdepartment = opp.Salesdepartment__c;
+        oppVo.projectArea = opp.ProjectArea__c;
         oppVo.marketBidDept = opp.MarketBidDept__c;
         oppVo.customerSecondaryCompany = opp.Customer_Secondary_Company__r.Name;
         oppVo.province = opp.Province__c;
@@ -84,7 +84,7 @@ public with sharing class Controller_Projectapplication {
                     pa.Oppty__c = parentId;//商机
 
                     Opportunity opp = [SELECT   Id,Name,
-                                    Salesdepartment__c,//所属大区/二级公司
+                                    ProjectArea__c,//所属大区/二级公司
                                     MarketBidDept__c,//客户分部
                                     Customer_Secondary_Company__c,//客户二级公司
                                     Province__c,//省份
@@ -95,7 +95,6 @@ public with sharing class Controller_Projectapplication {
                                     capacity__c,//容量（MW）
                                     Approvaltime__c,//预计）核准时间
                                     Estimated_Bidding_Time__c,//预计）招标时间
-                                    // Group__c,//项目所属集团
                                     Account.Id//客户全称
                                 FROM 
                                     Opportunity  
@@ -103,7 +102,7 @@ public with sharing class Controller_Projectapplication {
                                     Id =: parentId
                                 ];
 
-                    pa.Salesdepartment__c = opp.Salesdepartment__c;
+                    pa.ProjectArea__c = opp.ProjectArea__c;
                     pa.MarketBidDept__c = opp.MarketBidDept__c;
                     pa.Secondarycompany__c = opp.Customer_Secondary_Company__c;
                     pa.Province__c = opp.Province__c;
@@ -114,8 +113,6 @@ public with sharing class Controller_Projectapplication {
                     pa.MW__c = String.valueOf(opp.capacity__c);
                     pa.Approvaltime__c = approvaltime;
                     pa.Pretime__c = estimatedBiddingTime;
-                    pa.Group__c = opp.Account.Id;//客户全称
-                    // pa.ProjectName__c = opp.Name;//项目名称
                 }
             }
 
@@ -133,7 +130,7 @@ public with sharing class Controller_Projectapplication {
         @AuraEnabled
         public String name;//商机名称
         @AuraEnabled
-        public String salesdepartment;//所属大区/二级公司
+        public String projectArea;//所属大区/二级公司
         @AuraEnabled
         public String marketBidDept;//客户分部
         @AuraEnabled
